# controlMoblie

./: .gitmodules  AGENTS.md  README.en.md  README.md  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/controlmoblie/: ControlMoblieApp.java  ControlMoblieApp.kt  MainActivity.kt
app/src/main/java/com/controlmoblie/asr/: SenseVoiceModelManager.java  SenseVoiceModelManager.kt  SpeechRecognizerManager.java  SpeechRecognizerManager.kt  (+1 more)
app/src/main/jni/: CMakeLists.txt  llama_jni.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  item_permission.xml  overlay_control.xml
app/src/main/res/values/: ids.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
docs/superpowers/plans/: 2026-05-17-voice-control-mobile-plan.md  2026-05-22-llama-cpp-integration-plan.md  2026-05-22-tts-voice-feedback.md  2026-05-23-mediaprojection-screenshot.md  2026-05-23-mlkit-ocr.md  2026-05-23-paddleocr.md  2026-05-23-screen-ocr.md  2026-05-23-sensevoice-asr.md  2026-05-23-wechat-command-templates.md  2026-05-24-java-mvvm-refactor.md
docs/superpowers/specs/: 2026-05-17-voice-control-mobile-design.md  2026-05-22-llama-cpp-integration-design.md  2026-05-22-tts-voice-feedback-design.md  2026-05-23-mlkit-ocr-design.md  2026-05-23-paddleocr-design.md  2026-05-23-screen-ocr-design.md  2026-05-23-sensevoice-asr-design.md  2026-05-23-wechat-command-templates-design.md  2026-05-24-java-mvvm-refactor-design.md
gradle/: libs.versions.toml
(+57 files in other folders)
